# vulkan_experiment

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  notes.txt
app/: vulkan_experiment.ilk
app/shaders/: test.frag.json  test.frag.spv  test.vert.json  test.vert.spv
cmake/: SPIR-V.cmake
shaders/: CMakeLists.txt  test.frag  test.vert  triangle.vert  utils.glsl
src/: file_system.cpp  file_system.h  handle.h  hash.h  main.cpp  material.cpp  material.h  memory.cpp  memory.h  notes.txt  platform.cpp  platform.h  renderer.cpp  renderer.h  rendering.cpp  rendering.h  utils.h  vulkan_app.cpp  vulkan_app.h  vulkan_renderer.h  vulkan_resource_manager.cpp  vulkan_resource_manager.h  vulkan_types.h  vulkan_utils.cpp  vulkan_utils.h
src/demos/: demo.cpp  demo.h  triangle.cpp  triangle.h  vertex_buffers.cpp  vertex_buffers.h
static/: CMakeLists.txt  generate_static_sources.py  static_header.h.in  static_source.cpp.in
static/resources/: default_vertex_layout.json  vertex_layout_schema.json
tests/: tests.cpp
